--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,10 +3,10 @@
   <div class="footer-content">
     <p>Copyright &copy; Brandon Ikeda</p>
     <div class="social-media-icons">
-      <a href="#"><i class="fa fa-empire"></i></a>
-      <a href="#"><i class="fa fa-rebel"></i></a>
-      <a href="#"><i class="fa fa-github"></i></a>
-      <a href="#"><i class="fa fa-user"></i></a>
+      <a href="http://www.starwars.com/databank/galactic-empire" target="_blank"><i class="fa fa-empire"></i></a>
+      <a href="http://www.starwars.com/databank/rebel-alliance" target="_blank"><i class="fa fa-rebel"></i></a>
+      <a href="https://github.com/xikeda" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="http://www.brandonikeda.com/" target="_blank"><i class="fa fa-user"></i></a>
     </div>
   </div>
 </div>
